# whetstone

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  install.sh  justfile
.github/workflows/: release.yml
.serena/: project.yml
docs/: cli-reference.md  configuration.md  editors.md  install.md  interface-contract.md  migration.md  troubleshooting.md
docs/v3/: README.md  WHETSTONE_V3_PLAN.md  phase0prompt.md  phase1prompt.md  phase2prompt.md  phase3prompt.md  phase4prompt.md  phase5prompt.md  phase6prompt.md  phase7prompt.md  phase8prompt.md
site/: index.html  page.css
site/ds/: whetstone.css
site/src/: App.jsx  Architecture.jsx  CompressionDemo.jsx  DocsLinks.jsx  Editors.jsx  FAQ.jsx  Footer.jsx  Hero.jsx  InstallTerminal.jsx  Modules.jsx  Nav.jsx  Numbers.jsx  Releases.jsx  changelog.js  metadata.js  version.js
src/: changelog.rs  claude_code.rs  cli.rs  config.rs  dashboard.rs  db.rs  doctor.rs  headroom.rs  hooks.rs  integrations.rs  main.rs  memory.rs  migrate.rs  preflight.rs  release.rs  rtk.rs  settings.rs  setup.rs  stats.rs  ui.rs  uninstall.rs  update.rs  version.rs  wizard.rs  wrapper.rs
tests/: migrate_roundtrip.rs
