[package]
name = "whetstone-cli"
version = "3.6.2"
edition = "2021"
description = "Installer and CLI for Claude Code token optimization (Headroom + RTK + Memory)"
license = "MIT"
repository = "https://github.com/z19r/whetstone"

[[bin]]
name = "whetstone"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "string"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
semver = "1"
ureq = "2"
which = "6"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
flate2 = "1"
tar = "0.4"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
